Attendance module added

--- a/SMS/templates/student_template/student_home.html
+++ b/SMS/templates/student_template/student_home.html
@@ -171,6 +171,10 @@ Student | Dashboard
     </div>
 
     
+    {% block HomePage %}
+      
+    {% endblock HomePage %}
+      
     {% block content %}
       
     {% endblock content %}
